add player search capabilities